--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js -e js"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "multer": "^1.4.2",
     "nunjucks": "^3.2.1",
     "pg": "^8.0.2",
-    "sequelize": "^5.21.6"
+    "sequelize": "^5.21.6",
+    "session-file-store": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
