--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "moment": "^2.24.0",
     "multer": "^1.4.2",
     "nunjucks": "^3.2.1",
     "pg": "^8.0.2",
